syntax = "proto3";

package customer;

option go_package = "northwind/proto/customer";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service Customer {
    
    rpc CustomerByCustomerID(CustomerByCustomerIDRequest) returns (typespb.Customer) {
        option (google.api.http) = {
            get: "/v1/customer/{customerID}"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/customer/{customerID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/customer"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/customer/{customerID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/customer/upsert"
            body: "*"
            
        };
    }
    
}

message CustomerByCustomerIDRequest { 
    string customerID = 1;
}

message DeleteRequest { 
    string customerID = 1;
}

message InsertRequest { 
    google.protobuf.StringValue address = 1;
    google.protobuf.StringValue city = 2;
    string companyName = 3;
    google.protobuf.StringValue contactName = 4;
    google.protobuf.StringValue contactTitle = 5;
    google.protobuf.StringValue country = 6;
    string customerID = 7;
    google.protobuf.StringValue fax = 8;
    google.protobuf.StringValue phone = 9;
    google.protobuf.StringValue postalCode = 10;
    google.protobuf.StringValue region = 11;
}

message UpdateRequest { 
    google.protobuf.StringValue address = 1;
    google.protobuf.StringValue city = 2;
    string companyName = 3;
    google.protobuf.StringValue contactName = 4;
    google.protobuf.StringValue contactTitle = 5;
    google.protobuf.StringValue country = 6;
    // Output only.
    string customerID = 7;
    google.protobuf.StringValue fax = 8;
    google.protobuf.StringValue phone = 9;
    google.protobuf.StringValue postalCode = 10;
    google.protobuf.StringValue region = 11;
}

message UpsertRequest { 
    google.protobuf.StringValue address = 1;
    google.protobuf.StringValue city = 2;
    string companyName = 3;
    google.protobuf.StringValue contactName = 4;
    google.protobuf.StringValue contactTitle = 5;
    google.protobuf.StringValue country = 6;
    string customerID = 7;
    google.protobuf.StringValue fax = 8;
    google.protobuf.StringValue phone = 9;
    google.protobuf.StringValue postalCode = 10;
    google.protobuf.StringValue region = 11;
}
